<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:padding="4dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dialogServiceListItemUsernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_username"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <TextView
            android:id="@+id/dialogServiceListItemUserNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_user_name"
            android:textAppearance="@android:style/TextAppearance.Small" />
    </LinearLayout>

    <TextView
        android:id="@+id/dialogServiceListItemUseridTextView"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/service_userid"
        android:textColor="@color/text_light"
        android:textStyle="italic" />

</RelativeLayout>