<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/background_light"
        android:padding="4dp" >

        <ImageView
            android:id="@+id/profileImageImageView"
            android:layout_width="40dp"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@color/gray_light"
            android:contentDescription="@string/profile_image" />

        <LinearLayout
            android:id="@+id/profileNicknameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/profileImageImageView"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/profileNicknameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/profile_nickname"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/profileCountryImageImageView"
                    android:layout_width="16dip"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dip"
                    android:alpha="0.5"
                    android:contentDescription="@string/country"
                    android:cropToPadding="true" />

            </LinearLayout>

            <TextView
                android:id="@+id/profileNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/profile_name"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text_light" />
        </LinearLayout>

        <ImageView
            android:id="@+id/profileServiceImageView"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:alpha="0.5"
            android:contentDescription="@string/service"
            android:src="@drawable/logo_esea" />
    </RelativeLayout>

    <TextView
        android:id="@+id/profileLoadingTextView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/profile_loading"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/darker_gray"
        android:textStyle="italic" />

    <android.support.v4.view.ViewPager
        android:id="@+id/profileChildViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <android.support.v4.view.PagerTitleStrip
            android:id="@+id/profilePagerTitleStrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="#33b5e5"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:textColor="#fff" />
    </android.support.v4.view.ViewPager>

</LinearLayout>