<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:contentDescription="@string/Next"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/matchStatsContentLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/matchStatsButtonsLayout"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_light"
            android:weightSum="5" >

            <TextView
                style="@style/PlayerStats.Header"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:text="@string/player" />

            <LinearLayout
                android:id="@+id/matchStatsHeaderContainerLayout"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:stretchColumns="0" >
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@android:color/darker_gray" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:id="@+id/matchStatsPlayersLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <include layout="@layout/layout_player_team" />

                <include layout="@layout/layout_match_stats_player" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <TextView
        android:id="@+id/matchStatsNone_TextView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/match_stats_none"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/darker_gray"
        android:textStyle="italic"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/matchStatsButtonsLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@color/gray_light" >

        <View
            android:layout_alignParentTop="true"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@android:color/darker_gray" />

        <ImageButton
            android:id="@+id/matchStatsButtonsPrevImageButton"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/previous"
            android:src="@drawable/item_prev" />

        <ImageButton
            android:id="@+id/matchStatsButtonsNextImageButton"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/Next"
            android:src="@drawable/item_next" />

        <TextView
            android:id="@+id/matchStatsButtonsCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="0/0" />

    </RelativeLayout>

</RelativeLayout>