<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp" >

        <LinearLayout
            android:id="@+id/profileStatMainLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dip"
            android:gravity="center"
            android:orientation="vertical" >

            <include layout="@layout/layout_profile_info_mainstat" />
        </LinearLayout>

        <TextView
            style="@style/Profile.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overall" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_margin="4dip"
            android:background="@color/border_dark" />

        <!-- WLR -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="3" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    style="@style/Profile.Stats.Title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stats_damage_pr_round" />

                <com.skarbo.csgobrowser.view.GaugeView
                    android:id="@+id/profileStatsADRGauge"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_margin="2dp" />

                <TextView
                    android:id="@+id/profileStatsADR"
                    style="@style/Profile.Stats"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="1.00" />

                <TextView
                    android:id="@+id/profileStatsADRSubtitle"
                    style="@style/Profile.Stats.Subtitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:orientation="vertical" >

                    <TextView
                        style="@style/Profile.Stats.Title"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/stats_hsp_accuracy" />

                    <com.skarbo.csgobrowser.view.AccuracyView
                        android:id="@+id/profileStatsHSPAccuracy"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_margin="2dp" />

                    <TextView
                        android:id="@+id/profileStatsHSPTextView"
                        style="@style/Profile.Stats"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="00.0" />

                    <TextView
                        android:id="@+id/profileStatsHeadshotsTextView"
                        style="@style/Profile.Stats.Subtitle"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/stats_headshots" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    style="@style/Profile.Stats.Title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stats_win_lose_ratio" />

                <com.skarbo.csgobrowser.view.GaugeView
                    android:id="@+id/profileStatsWLRGauge"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_margin="2dp" />

                <TextView
                    android:id="@+id/profileStatsWLR"
                    style="@style/Profile.Stats"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="1.00" />

                <TextView
                    android:id="@+id/profileStatsWinTieLose"
                    style="@style/Profile.Stats.Subtitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="W999 T999 L999" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="8dip"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:layout_marginTop="8dip"
            android:background="@color/border_dark" />

        <!-- Frags/Deaths/KPD -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    style="@style/Profile.Stats.Title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stats_frags" />

                <TextView
                    android:id="@+id/profileStatsFrags"
                    style="@style/Profile.Stats"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="1,000" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <View
                    android:layout_width="1dip"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:background="@color/border_dark" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/profileStatsDeathsTitleTextView"
                        style="@style/Profile.Stats.Title"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/stats_deaths" />

                    <TextView
                        android:id="@+id/profileStatsDeaths"
                        style="@style/Profile.Stats"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="1,000" />
                </LinearLayout>

                <View
                    android:layout_width="1dip"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:background="@color/border_dark" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    style="@style/Profile.Stats.Title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stats_kdr" />

                <TextView
                    android:id="@+id/profileStatsKDR"
                    style="@style/Profile.Stats"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="1.00" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_margin="4dip"
            android:background="@color/border_dark" />
    </LinearLayout>

</ScrollView>